@@ -1,65 +1,71 @@
 package com.sprint.project.nurseoncallroom.service.implementation;
 
-import com.sprint.project.nurseoncallroom.dto.response.BlockResponseDTO;
-import com.sprint.project.nurseoncallroom.dto.response.RoomResponseDTO;
-import com.sprint.project.nurseoncallroom.entity.BlockId;
-import com.sprint.project.nurseoncallroom.entity.RoomEntity;
-import com.sprint.project.nurseoncallroom.exception.OnCallNotFoundException;
-import com.sprint.project.nurseoncallroom.repository.BlockRepository;
-import com.sprint.project.nurseoncallroom.repository.RoomRepository;
+import com.sprint.project.nurseoncallroom.dto.response.*;
+import com.sprint.project.nurseoncallroom.entity.*;
+import com.sprint.project.nurseoncallroom.exception.*;
+import com.sprint.project.nurseoncallroom.repository.*;
 import com.sprint.project.nurseoncallroom.service.BlockService;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@Transactional(readOnly = true)
 public class BlockServiceImpl implements BlockService {
 
-    @Autowired private BlockRepository blockRepository;
-    @Autowired private RoomRepository roomRepository;
+    @Autowired
+    private BlockRepository blockRepository;
 
-    private RoomResponseDTO toRoomDTO(RoomEntity e) {
+    @Autowired
+    private RoomRepository roomRepository;
+
+    // 🔥 COMMON MAPPER METHOD
+    private RoomResponseDTO mapToRoomDTO(RoomEntity r) {
+
         RoomResponseDTO dto = new RoomResponseDTO();
-        dto.setRoomNumber(e.getRoomNumber());
-        dto.setType(e.getType());
-        dto.setUnavailable(e.getUnavailable());
 
-        if (e.getBlock() != null) {
-            dto.setBlockFloor(e.getBlock().getBlockFloor());
-            dto.setBlockCode(e.getBlock().getBlockCode());
-            dto.setBlockName(e.getBlock().getName());
+        dto.setRoomNumber(r.getRoomNumber());
+        dto.setType(r.getType());
+        dto.setUnavailable(r.getUnavailable());
+
+        if (r.getBlock() != null) {
+            dto.setBlockFloor(r.getBlock().getBlockFloor());
+            dto.setBlockCode(r.getBlock().getBlockCode());
+            dto.setBlockName(r.getBlock().getName());
         }
+
         return dto;
     }
 
     @Override
     public List<BlockResponseDTO> getAllBlocks() {
-        return blockRepository.findAll().stream().map(b -> {
-            BlockResponseDTO dto = new BlockResponseDTO();
-            dto.setBlockFloor(b.getBlockFloor());
-            dto.setBlockCode(b.getBlockCode());
-            dto.setName(b.getName());
-            return dto;
-        }).collect(Collectors.toList());
+
+        return blockRepository.findAll().stream()
+                .map(b -> new BlockResponseDTO(
+                        b.getBlockFloor(),
+                        b.getBlockCode(),
+                        b.getName()
+                ))
+                .toList();
     }
 
     @Override
     public List<RoomResponseDTO> getRoomsForBlock(Integer floor, Integer code) {
 
-        blockRepository.findById(new BlockId(floor, code))
-                .orElseThrow(() -> new OnCallNotFoundException("Block not found"));
+        BlockEntity block = blockRepository.findById(new BlockId(floor, code))
+                .orElseThrow(() -> new BlockNotAvailableException(floor, code));
 
-        // 🔥 USE DERIVED QUERY (NOT @Query)
         List<RoomEntity> rooms =
                 roomRepository.findByBlock_BlockFloorAndBlock_BlockCode(floor, code);
 
+        if (rooms.isEmpty()) {
+            throw new BlockCapacityFullException(floor, code);
+        }
+
+        // 🔥 USE MAPPER METHOD
         return rooms.stream()
-                .map(this::toRoomDTO)
-                .collect(Collectors.toList());
+                .map(this::mapToRoomDTO)
+                .toList();
     }
 }
